--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="#">HOME</a>
             <a href="https://youtu.be/qEwShxPrM6s" target="_blank">WATCH</a>
             <a href="https://www.virtualutopia.org/tutorials" target="_blank">RESOURCES</a>
-            <a href="LookbookWebsite/index.html" target="_blank">LOOK BOOK</a>
+            <a href="look/index.html" target="_blank">LOOK BOOK</a>
           </div>
         </div>
       </div>
