--- a/look/index.html
+++ b/look/index.html
@@ -22,7 +22,7 @@
 		<script type="importmap">
 			{
 				"imports": {
-					"three": "../Lookbook-Website/build/three.module.js"
+					"three": "../look/build/three.module.js"
 				}
 			}
 		</script>
