change name and color

--- a/look/index.html
+++ b/look/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>three.js webgl - additive animation - skinning</title>
+		<title>Midnight Arcade 3D Avatar Preview</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<link type="text/css" rel="stylesheet" href="main.css">
@@ -64,7 +64,7 @@
 				clock = new THREE.Clock();
 
 				scene = new THREE.Scene();
-				scene.background = new THREE.Color( 0xa0a0a0 );
+				scene.background = new THREE.Color( 0x4A07B0 );
 				scene.fog = new THREE.Fog( 0xa0a0a0, 10, 50 );
 
 				const hemiLight = new THREE.HemisphereLight( 0xffffff, 0x444444 );
