Add Music to Lookbook

--- a/book/index.html
+++ b/book/index.html
@@ -36,5 +36,9 @@
         </div>
       </a>
     </div>
+		<audio controls autoplay>
+		  <source src="music/slow2018.mp3" type="audio/mpeg">
+		  Your browser does not support the audio element.
+		</audio>
   </body>
 </html>
