--- a/look/index.html
+++ b/look/index.html
@@ -15,6 +15,7 @@
 		</style>
 	</head>
 	<body>
+		<div id="container"></div>
 		<div id="info">
 		<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
 
